fix(security,landing): harden credentials, cookie consent, SEO domain fix
Security hardening:
- Remove .env.production, .env.staging, .env.customer-simulation from repo
  and add to .gitignore (contained template passwords/secrets)
- Replace hardcoded DB passwords in 5 service application.yml files with
  ${SPRING_DATASOURCE_PASSWORD:} env var references
- Replace hardcoded RabbitMQ password in clinical-workflow-service
- Make query-api-service CORS origins configurable via property
- Read JWT secret from environment in query-api-service SecurityConfig

Landing page:
- Add cookie consent banner (CookieConsent + CookieSettingsButton components)
  with localStorage persistence, window.hdimConsent, and CustomEvent hooks
- Add Cookie Settings link to footer Legal column
- Update privacy policy Cookies section to reflect cookieless Plausible
  analytics and consent mechanism
- Fix SEO domain: sitemap.ts and robots.ts now use healthdatainmotion.com
  (matches JSON-LD and Plausible config)
- Remove deprecated swcMinify from next.config.js

Build infrastructure:
- Fix Pact version mismatch: contract-testing/build.gradle.kts now reads
  from version catalog (4.6.14) instead of hardcoded 4.6.20

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>